[gd_scene load_steps=6 format=3 uid="uid://c1ybel7dksmf0"]

[ext_resource type="PackedScene" uid="uid://6biqldqluklg" path="res://assets/scenes/enemy.tscn" id="1_gbvye"]
[ext_resource type="Script" path="res://assets/scripts/enemy_shooterAI.gd" id="2_s5ams"]
[ext_resource type="PackedScene" uid="uid://cierws6fcdu0c" path="res://assets/scenes/weapon.tscn" id="3_p67sh"]
[ext_resource type="Script" path="res://assets/scripts/bulletmanager.gd" id="4_ipode"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5tg4p"]
radius = 160.0

[node name="Enemy" instance=ExtResource("1_gbvye")]

[node name="Weapon" parent="CharacterBody2D" index="2" instance=ExtResource("3_p67sh")]
position = Vector2(33, 0)

[node name="BulletManager" type="Node2D" parent="CharacterBody2D" index="3"]
script = ExtResource("4_ipode")

[node name="AI" type="Node2D" parent="." index="3"]
script = ExtResource("2_s5ams")
optimal_range = 200
movement_speed = 120
weapon_cooldown = 0.8
patrol_range = 50

[node name="PlayerDetectionZone" type="Area2D" parent="AI" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_5tg4p")

[node name="PatrolTimer" type="Timer" parent="AI" index="1"]
wait_time = 3.0

[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_player_detection_zone_body_exited"]
[connection signal="timeout" from="AI/PatrolTimer" to="AI" method="_on_patrol_timer_timeout"]
